--- a/University/ContosoUniversity/Pages/Index.cshtml
+++ b/University/ContosoUniversity/Pages/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="row no-gutters border mb-4">
             <div class="col p-4 mb-4 ">
                 <p class="card-text">
-                    Contoso University is a sample application that
+                    University is a sample application that
                     demonstrates how to use Entity Framework Core in an
                     ASP.NET Core Razor Pages web app.
                 </p>
@@ -20,7 +20,7 @@
         <div class="row no-gutters border mb-4">
             <div class="col p-4 d-flex flex-column position-static">
                 <p class="card-text mb-auto">
-                    You can build the application by following the steps in a series of tutorials.
+                    You can build the application by following the steps in a series of tutorials. <br/> You can build the application by following the steps in a series of tutorials.
                 </p>
                 <p>
 @*                    <a href="https://docs.microsoft.com/aspnet/core/data/ef-rp/intro" class="stretched-link">See the tutorial</a>
@@ -32,11 +32,11 @@
         <div class="row no-gutters border mb-4">
             <div class="col p-4 d-flex flex-column">
                 <p class="card-text mb-auto">
-                    You can download the completed project from GitHub.
+                    You can download the completed project from GitHub. <br /> You can download the completed project from GitHub. <br /> You can download the completed project from GitHub. <br /> You can download the completed project from GitHub.
                 </p>
                 <p>
 @*                    <a href="https://github.com/dotnet/AspNetCore.Docs/tree/main/aspnetcore/data/ef-rp/intro/samples" class="stretched-link">See project source code</a>
-*@                </p>
+*@              </p>
             </div>
         </div>
     </div>
